2008-03-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/filefilter.{h,cpp}: Make "FileFilter" an empty class with a
	single static method CreateFilter(). The full-fledged
	{con,de}structors are just unnecessary.

	* src/wordseg.cpp (main): Create FilterX with the static method.
	Remove now-unneeded FileFilter variable.

2008-03-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (main): Delete filter X object after finishing
	wordseg, so output file gets flushed.

2008-03-20  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (main): duplicate tmpnam() results, instead of mere
	pointer assignment, as the returned value is pointer to static buffer,
	resulting in the same names for tmpin and tmpout. Fixing
	non-functional '-u u,u' option. Bug report by Neutron Soutmun.

2008-03-19  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/abswordseg.cpp (AbsWordSeg::CreateWordList): Fix logical errors
	introduced during portability fix, which made swath not break any
	word. Bug report by Pisut Tempatarachoke.

2008-02-07  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/swath.1: Escape minus signs. Thanks debian's lintian.

2008-02-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in, NEWS:
	=== Version 0.3.2 ===

2008-02-02  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* configure.in: Remove unused ISODATE var. Remove checks for CC and
	CPP. Just CXX is enough.

2008-02-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	Reveal the encoding conversion feature to users.

	* src/wordseg.cpp (Usage): Add '-u' option in help message.
	* src/swath.1: Add documentation for '-u' option, with example.
	* README: Mention the '-u' option for UTF-8 LaTeX files. Indent the
	sample codes for readability.

	* src/swath.1: Document the default matching scheme, and adjust the
	example accordingly.

2008-02-01  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* src/wordseg.cpp (main):